--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           ruby-version: "3.1"
 
+      - name: 📦 Install Ruby dependencies
+        run: gem install sqlite3
+
       - name: 🔍 Run API Monitoring
         env:
           DURATION_MIN: ${{ github.event.inputs.duration_minutes || '10' }}
